# xo-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  http_client.h  md5.c  md5.h  server.c  util.c  util.h  zlog.conf
assets/: server.crt  server.key
cmake/modules/: FindProtobufC.cmake  Findlibrados2.cmake
docs/: ceph-boot.md
include/: conn_migration.h  handoff.h  http_client.h  object_store.h  osd_mapping.h  queue.h  tls.h  util.h
proto/: socket_serialize.proto
scripts/: calculate_total_throughput.sh  one_gateway_multiple_osd_uniform.sh  one_gateway_multiple_osd_zipf.sh  parse_cpu.py  reset.sh  rgw_to_osd.sh  s3.lua  select_zipf.py  utils.sh  xo_to_osd.sh  zlog.conf
src/: .handoff.c.swp  conn_migration.c  handoff.c  handoff.c.bak  hkdf.c  http_client.c  object_store.c  object_store.c.bak  queue.c  server.c  tls.c  util.c
